--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Mi1k.GitHub.io</title>
+    <title>Scott</title>
   </head>
 
   <body>
@@ -16,10 +16,8 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/mi1k">View on GitHub</a>
-
-          <h1 id="project_title">Mi1k.GitHub.io</h1>
-          <h2 id="project_tagline"></h2>
+          <h1 id="project_title">Scotts Webpage</h1>
+          <h2 id="project_tagline">Now with 100% more java!</h2>
 
         </header>
     </div>
@@ -61,7 +59,7 @@
       </footer>
     </div>
 
-    
+
 
   </body>
 </html>
