--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
+    <style>
+      body{
+        background-image: url("images/stars.gif");
+        background-size: 20% 30%;
+        background-repeat: repeat;
+            }
+    </style>
+
     <title>Scott</title>
   </head>
 
