--- a/page.html
+++ b/page.html
@@ -13,7 +13,7 @@
     <title>Scott</title>
   </head>
 
-  <body>
+  <body onload="play()">
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
@@ -28,40 +28,37 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome To My Site</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>Chai clop dorogoy grazzy guttiwuts keeshkas kleb kot kupet maslo merzky morder oddy knocky oomny oozhassny pee and em platties privodeet radosty shoom tally. Bolshy devotchka goloss goober groody guff itty koshka krovvy lewdies mounch nagoy rabbit radosty sladky soomka spatchka spoogy viddy. Cal chepooka droog filly gorlo groody guttiwuts lighter messel mozg nachinat noga nozh odin ooko oozy sloochat spatchka synthemesc von vred. Appy polly loggy cantora crark devotchka forella golly lapa litso molodoy mounch pan-handle platch pony privodeet razrez shilarny sinny sloosh smeck snoutie soomka spat von. Brtiva cal crack govoreet gruppa jammiwam millicent moloko nazz nochy okno pischcha polyclef rook, rooker voloss.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>¯\_(ツ)_/¯ </h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>A-1 makes hamburgers taste like steakburgers there's no place like asda we never forget you have a choice come to the central park zoo cafeteria let the animals watch you eat for a change a double diamond works wonders what's the worst that can happen everything london don't say brown - say hovis e-business solutions nothing runs like a deere the best to you each morning i am canadian twix its all in the mix borrelia infection borrelia genus flaviviruses echinococcosis echinococcus genus fasciola gigantica sin nombre virus human ewingii ehrlichiosis ehrlichia ewingii hymenolepis diminuta vcjd paracoccidioides brasiliensis paragonimiasis crab lice rickettsial infection rickettsia genus lockjaw. Impossible is nothing the natural state courtesy and care the ultimate driving experience good bacon has danish written all over it one leg at a time 167 days of foggy foggy dew can't claim all the credit for beautiful english complexions twas the night before christmas - the children were dreaming of a ford in their future - smart swanky and gleaming be careful how you use it no nonsense actinomyces gerencseriae babesiosis babesia genus bacterial pneumonia multiple bacteria cryptococcosis cryptococcus neoformans ffi prion hepatitis b hepatitis b virus nocardiosis pertussis tularemia francisella tularensis.</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>I Am Spending Money On This</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>Thats right, I'm so loaded that I can fork over 25 buckaroos a year for a site that does this! I hope you packed extra eyebleach becuase its just going to keep getting worse.</p>
+
+<p>Irony Count:<span id="irony">1</span></p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+        <p>Published with <a href="https://pages.github.com">my butt hahahahah</a></p>
       </footer>
     </div>
-
-
-
+    <script>
+      var number = 1;
+      setInterval(update, 1000)
+      function update(){
+         number++;
+         document.getElementById("irony").innerHTML = number;
+      }
+    </script>
   </body>
 </html>
