--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <button onclick="step()" class="bg-primary controls">Step</button>
                             <button id="play" class="bg-primary controls">play</button>
                             <button id="pause" class="bg-primary controls">pause</button>
-                            <button onclick="clear()" class="bg-primary controls">clear</button>
+                            <button onclick="load()" class="bg-primary controls">clear</button>
                             <button onclick="rand()" class="bg-primary controls">rand</button>
                             <button onclick="seed()" class="bg-primary controls">seed</button>
                             <button onclick="city()" class="bg-primary controls">city</button>
@@ -80,6 +80,7 @@
         <script src="js/jquery-1.11.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/automataInJs.js"></script>
+        <!-- <script src="js/automataColored.js"></script> -->
         <!-- <script src="js/automataCities.js"></script> -->
     </body>
 </html>
