Fixed Notation typo

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                     <p>High Life: B36/S23</p>
                     <p>Replicator: B1357/S1357</p>
                     <p>Day & Night: B3678/S34678</p>
-                    <p>Amoeba: B1358/S357</p>
-                    <p>Walled Cities: B2345/S45678</p>
+                    <p>Maze: B3/S12345</p>
+                    <p>Walled Cities: B45678/S2345</p>
                 </div>
             </div>
         </div>
