--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="js/jquery-1.11.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
-        <script src="js/automataInJs.js"></script>
-        <!-- <script src="js/automataColored.js"></script> -->
+        <!-- <script src="js/automataInJs.js"></script> -->
+        <script src="js/automataColored.js"></script>
         <!-- <script src="js/automataCities.js"></script> -->
     </body>
 </html>
