--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
                 <div class="col-md-3">
                     <h3>Rules</h3>
 
-                    Born: 1 2 3 4 5 6 7 8<br>
-                    <input type="checkbox" class="life" value="1">
-                    <input type="checkbox" class="life" value="2">
-                    <input type="checkbox" class="life" value="3" checked="checked">
-                    <input type="checkbox" class="life" value="4">
-                    <input type="checkbox" class="life" value="5">
-                    <input type="checkbox" class="life" value="6">
-                    <input type="checkbox" class="life" value="7">
-                    <input type="checkbox" class="life" value="8">
+                    Born:<br>
+                    1:<input type="checkbox" class="life" value="1">
+                    2:<input type="checkbox" class="life" value="2">
+                    3:<input type="checkbox" class="life" value="3" checked="checked">
+                    4:<input type="checkbox" class="life" value="4">
+                    5:<input type="checkbox" class="life" value="5">
+                    6:<input type="checkbox" class="life" value="6">
+                    7:<input type="checkbox" class="life" value="7">
+                    8:<input type="checkbox" class="life" value="8">
                     <br>
-                    Survive: 1 2 3 4 5 6 7 8<br>
-                    <input type="checkbox" class="death" value="1">
-                    <input type="checkbox" class="death" value="2" checked="checked">
-                    <input type="checkbox" class="death" value="3" checked="checked">
-                    <input type="checkbox" class="death" value="4">
-                    <input type="checkbox" class="death" value="5">
-                    <input type="checkbox" class="death" value="6">
-                    <input type="checkbox" class="death" value="7">
-                    <input type="checkbox" class="death" value="8">
+                    Survive:<br>
+                    1:<input type="checkbox" class="death" value="1">
+                    2:<input type="checkbox" class="death" value="2" checked="checked">
+                    3:<input type="checkbox" class="death" value="3" checked="checked">
+                    4:<input type="checkbox" class="death" value="4">
+                    5:<input type="checkbox" class="death" value="5">
+                    6:<input type="checkbox" class="death" value="6">
+                    7:<input type="checkbox" class="death" value="7">
+                    8:<input type="checkbox" class="death" value="8">
                     <br>
                     <button onclick="setRules()" class="bg-primary">Set New Rules</button>
                 </div>
