final automata push

--- a/automata.html
+++ b/automata.html
@@ -31,8 +31,8 @@
             </ul>
          </div>
       </div>
-        <div class="pure-g" align="center" style="padding-top:4em;">
-                <div class="pure-u-1-4">
+        <div class="pure-g" align="center" style="padding-top:2em;">
+                <div class="pure-u-1-4 white-text">
                     <h3>Rules</h3>
 
                     Born:<br>
@@ -59,7 +59,7 @@
                 </div>
                 <div class="pure-u-1-2">
                     <h1>Cellular Automata</h1>
-                    <canvas id="board" width="500" height="500"  style="border:1px solid #d3d3d3;">
+                    <canvas id="board" width="500" height="500"  style="border:5px solid white;">
                         Your browser does not support the HTML5 canvas tag.</canvas>
                         <br />
                         <button onclick="step()" class="pure-button-primary">Step</button>
