linkin and github contact added

--- a/source.html
+++ b/source.html
@@ -21,9 +21,9 @@
       <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
          <a class="pure-menu-heading" href="">Landing Page</a>
          <ul class="pure-menu-list">
-            <li class="pure-menu-item pure-menu-selected"><a href="" class="pure-menu-link">Home</a></li>
+            <li class="pure-menu-item"><a href="" class="pure-menu-link">Home</a></li>
             <li class="pure-menu-item"><a href="automata.html" class="pure-menu-link">Automata</a></li>
-            <li class="pure-menu-item"><a href="source.html" class="pure-menu-link">Source</a></li>
+            <li class="pure-menu-item pure-menu-selected"><a href="source.html" class="pure-menu-link">Source</a></li>
             <li class="pure-menu-item"><a href="network.html" class="pure-menu-link">Network</a></li>
          </ul>
       </div>
@@ -31,10 +31,9 @@
 
    <div class="splash-container">
       <div class="splash">
-         <h1 class="splash-head">Scott Campbell</h1>
-         <p class="splash-subhead coderNameList1"></p>
-         <p class="splash-subhead coderNameList2"></p>
-         <p class="splash-subhead coderNameList3"></p>
+         <p class="splash-subhead"></p>
+         <a href="https://github.com/mi1k">Github Profile</a>
+         <a href="https://github.com/mi1k/SofwareGuildProjects">Favorite Projects</a>
       </div>
    </div>
    <script src="js/jquery-1.11.1.min.js"></script>
