--- a/network.html
+++ b/network.html
@@ -21,20 +21,19 @@
       <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
          <a class="pure-menu-heading" href="">Landing Page</a>
          <ul class="pure-menu-list">
-            <li class="pure-menu-item pure-menu-selected"><a href="" class="pure-menu-link">Home</a></li>
+            <li class="pure-menu-item"><a href="" class="pure-menu-link">Home</a></li>
             <li class="pure-menu-item"><a href="automata.html" class="pure-menu-link">Automata</a></li>
             <li class="pure-menu-item"><a href="source.html" class="pure-menu-link">Source</a></li>
-            <li class="pure-menu-item"><a href="network.html" class="pure-menu-link">Network</a></li>
+            <li class="pure-menu-item pure-menu-selected"><a href="network.html" class="pure-menu-link">Network</a></li>
          </ul>
       </div>
    </div>
 
    <div class="splash-container">
       <div class="splash">
-         <h1 class="splash-head">Scott Campbell</h1>
-         <p class="splash-subhead coderNameList1"></p>
-         <p class="splash-subhead coderNameList2"></p>
-         <p class="splash-subhead coderNameList3"></p>
+         <p class="splash-subhead">Network</p>
+         <a href="www.linkedin.com/in/scott-campbell-325555125">LinkedIn</a>
+         <a href="#">Resume Download (out of service)</a>
       </div>
    </div>
    <script src="js/jquery-1.11.1.min.js"></script>
