--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body onload="generate()">
    <div class="header">
       <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-         <a class="pure-menu-heading" href="">Landing Page</a>
+         <a class="pure-menu-heading" href="">Home</a>
          <ul class="pure-menu-list">
             <li class="pure-menu-item pure-menu-selected"><a href="" class="pure-menu-link">Home</a></li>
             <li class="pure-menu-item"><a href="automata.html" class="pure-menu-link">Automata</a></li>
