--- a/automata.html
+++ b/automata.html
@@ -22,12 +22,12 @@
    <body onload="load();">
       <div class="header">
          <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-            <a class="pure-menu-heading" href="">automata</a>
+            <a class="pure-menu-heading" href="index.html">Automata</a>
             <ul class="pure-menu-list">
                <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
                <li class="pure-menu-item pure-menu-selected"><a href="" class="pure-menu-link">Automata</a></li>
-               <li class="pure-menu-item"><a href="#" class="pure-menu-link">Source</a></li>
-               <li class="pure-menu-item"><a href="#" class="pure-menu-link">Network</a></li>
+               <li class="pure-menu-item"><a href="source.html" class="pure-menu-link">Source</a></li>
+               <li class="pure-menu-item"><a href="network.html" class="pure-menu-link">Network</a></li>
             </ul>
          </div>
       </div>
