--- a/network.html
+++ b/network.html
@@ -19,9 +19,9 @@
 <body onload="generate()">
    <div class="header">
       <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-         <a class="pure-menu-heading" href="">Landing Page</a>
+         <a class="pure-menu-heading" href="index.html">Network</a>
          <ul class="pure-menu-list">
-            <li class="pure-menu-item"><a href="" class="pure-menu-link">Home</a></li>
+            <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
             <li class="pure-menu-item"><a href="automata.html" class="pure-menu-link">Automata</a></li>
             <li class="pure-menu-item"><a href="source.html" class="pure-menu-link">Source</a></li>
             <li class="pure-menu-item pure-menu-selected"><a href="network.html" class="pure-menu-link">Network</a></li>
@@ -30,10 +30,19 @@
    </div>
 
    <div class="splash-container">
-      <div class="splash">
-         <p class="splash-subhead">Network</p>
-         <a href="www.linkedin.com/in/scott-campbell-325555125">LinkedIn</a>
+      <div class="splash" align="center">
+         <p class="splash-subhead">Network</p><br />
+         <a href="www.linkedin.com/in/scott-campbell-325555125">LinkedIn</a><br />
          <a href="#">Resume Download (out of service)</a>
+      </div>
+   </div>
+   <div class="splash-container">
+      <div class="splash" align ="center">
+         <p class="splash-head">Network</p>
+         <p class="splash-subhead">
+            If you want to see my professional history: <a href="www.linkedin.com/in/scott-campbell-325555125">Github Profile</a> <br />
+            Currently out of service: <a href="">Resume</a>
+         </p>
       </div>
    </div>
    <script src="js/jquery-1.11.1.min.js"></script>
