--- a/source.html
+++ b/source.html
@@ -19,9 +19,9 @@
 <body onload="generate()">
    <div class="header">
       <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-         <a class="pure-menu-heading" href="">Landing Page</a>
+         <a class="pure-menu-heading" href="index.html">Source</a>
          <ul class="pure-menu-list">
-            <li class="pure-menu-item"><a href="" class="pure-menu-link">Home</a></li>
+            <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
             <li class="pure-menu-item"><a href="automata.html" class="pure-menu-link">Automata</a></li>
             <li class="pure-menu-item pure-menu-selected"><a href="source.html" class="pure-menu-link">Source</a></li>
             <li class="pure-menu-item"><a href="network.html" class="pure-menu-link">Network</a></li>
@@ -30,10 +30,12 @@
    </div>
 
    <div class="splash-container">
-      <div class="splash">
-         <p class="splash-subhead"></p>
-         <a href="https://github.com/mi1k">Github Profile</a>
-         <a href="https://github.com/mi1k/SofwareGuildProjects">Favorite Projects</a>
+      <div class="splash" align ="center">
+         <p class="splash-head">source</p>
+         <p class="splash-subhead">
+            If you want to see what I've been up too: <a href="https://github.com/mi1k">Github Profile</a> <br />
+            If you want to jump stright to the good stuff: <a href="https://github.com/mi1k/SofwareGuildProjects">Favorite Projects</a>
+         </p>
       </div>
    </div>
    <script src="js/jquery-1.11.1.min.js"></script>
