--- a/network.html
+++ b/network.html
@@ -40,7 +40,8 @@
       <div class="splash" align ="center">
          <p class="splash-head">Network</p>
          <p class="splash-subhead">
-            If you want to see my professional history: <a href="www.linkedin.com/in/scott-campbell-325555125">Github Profile</a> <br />
+            If you want to see my professional history: <a href="www.linkedin.com/in/scott-campbell-325555125">Github Profile</a>
+            <br /><br />
             Currently out of service: <a href="">Resume</a>
          </p>
       </div>
