--- a/source.html
+++ b/source.html
@@ -33,7 +33,7 @@
       <div class="splash" align ="center">
          <p class="splash-head">source</p>
          <p class="splash-subhead">
-            If you want to see what I've been up too: <a href="https://github.com/mi1k">Github Profile</a> <br />
+            If you want to see what I've been up too: <a href="https://github.com/mi1k">Github Profile</a> <br /> <br />
             If you want to jump stright to the good stuff: <a href="https://github.com/mi1k/SofwareGuildProjects">Favorite Projects</a>
          </p>
       </div>
