--- a/network.html
+++ b/network.html
@@ -40,9 +40,9 @@
       <div class="splash" align ="center">
          <p class="splash-head">Network</p>
          <p class="splash-subhead">
-            If you want to see my professional history: <a href="www.linkedin.com/in/scott-campbell-325555125">Github Profile</a>
+            If you want to see my professional history: <a href="www.linkedin.com/in/scott-campbell-325555125">LinkedIn</a>
             <br /><br />
-            Currently out of service: <a href="">Resume</a>
+            If you want to see my current resume: <a href="">Download</a>
          </p>
       </div>
    </div>
