--- a/automata.html
+++ b/automata.html
@@ -68,7 +68,7 @@
             <button onclick="load()" class="pure-button-primary">clear</button>
             <button onclick="rand()" class="pure-button-primary">rand</button>
             <button onclick="seed()" class="pure-button-primary">seed</button>
-            <button onclick="city()" class="pure-button-primary">city</button>
+            <button onclick="map()" class="pure-button-primary">map</button>
             <!-- <button onclick="learn()" class="pure-button-primary">Learn</button> -->
          </div>
          <div class="pure-u-1-4">
@@ -87,7 +87,8 @@
       <script src="js/jquery-1.11.1.min.js"></script>
       <script src="js/bootstrap.min.js"></script>
       <!-- <script src="js/automataInJs.js"></script> -->
-      <script src="js/automataColored.js"></script>
+      <!--<script src="js/automataColored.js"></script>-->
+      <script src="js/automataRevamped.js"></script>
       <script src="js/rules.js"></script>
       <!-- <script src="js/ml.js"></script> -->
       <!-- <script src="js/automataCities.js"></script> -->
