--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
          <a class="pure-menu-heading" href="">Home</a>
          <ul class="pure-menu-list">
             <li class="pure-menu-item pure-menu-selected"><a href="" class="pure-menu-link">Home</a></li>
-            <li class="pure-menu-item"><a href="automata.html" class="pure-menu-link">Automata</a></li>
+            <li class="pure-menu-item"><a href="automata" class="pure-menu-link">Automata</a></li>
             <li class="pure-menu-item"><a href="source.html" class="pure-menu-link">Source</a></li>
             <li class="pure-menu-item"><a href="network.html" class="pure-menu-link">Network</a></li>
          </ul>
