--- a/index.html
+++ b/index.html
@@ -1,43 +1,30 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="description" content="A layout example that shows off a responsive product landing page.">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A layout example that shows off a responsive product landing page.">
 
-   <title>Scotts Page </title>
+    <title>Scotts Page </title>
 
-   <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
 
-   <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
 
-   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
 
-   <link rel="stylesheet" href="css/layouts/scottPage.css">
+    <link rel="stylesheet" href="assets/css/layouts/scottPage.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
+    <script src="app/app.module.js"></script>
+    <script src="app/app.routes.js"></script>
 
 </head>
-<body onload="generate()">
-   <div class="header">
-      <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-         <a class="pure-menu-heading" href="">Home</a>
-         <ul class="pure-menu-list">
-            <li class="pure-menu-item pure-menu-selected"><a href="" class="pure-menu-link">Home</a></li>
-            <li class="pure-menu-item"><a href="automata" class="pure-menu-link">Automata</a></li>
-            <li class="pure-menu-item"><a href="source.html" class="pure-menu-link">Source</a></li>
-            <li class="pure-menu-item"><a href="network.html" class="pure-menu-link">Network</a></li>
-         </ul>
-      </div>
-   </div>
 
-   <div class="splash-container">
-      <div class="splash">
-         <h1 class="splash-head">Scott Campbell</h1>
-         <p class="splash-subhead coderNameList1"></p>
-         <p class="splash-subhead coderNameList2"></p>
-         <p class="splash-subhead coderNameList3"></p>
-      </div>
-   </div>
-   <script src="js/jquery-1.11.1.min.js"></script>
-   <script src="js/coderNameList.js"></script>
-</body>
+    <body ng-app="app" >
+        <ng-view></ng-view>
+    </body>
+
 </html>
