--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A layout example that shows off a blog page with a list of posts.">
     <title>Blog &ndash; Layout Examples &ndash; Pure</title>
-    <base href="/">
+    <!--<base href="/">-->
     <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
     
     <!--[if lte IE 8]>
@@ -20,16 +20,10 @@
             <link rel="stylesheet" href="css/layouts/blog-old-ie.css">
         <![endif]-->
         <!--[if gt IE 8]><!-->
-            <link rel="stylesheet" href="css/layouts/ScottPage.css">
+            <link rel="stylesheet" href="css/ScottPage.css">
         <!--<![endif]-->
 </head>
 <body>
-
-
-
-
-
-
 
 <div id="layout" class="pure-g">
     <div class="sidebar pure-u-1 pure-u-md-1-4">
