Front page revamp

--- a/automata.html
+++ b/automata.html
@@ -85,9 +85,10 @@
             </div>
             <div class="pure-u-1-4">
                 <h3>Info</h3>
-                <p>Imagine each square is a cell. A Black square is "dead" and a colored square is "alive" These cells have special
-                    rules for when they become alive, and when they die. The default ruleset is called "Conway's Game of Life."
-                    You can click on one of the rule sets below to use them, you can also create your own rules!
+                <p>Imagine each square is a cell. A Black square is "dead" and a colored square is "alive" These cells have
+                    special rules for when they become alive, and when they die. The default ruleset is called "Conway's
+                    Game of Life." You can click on one of the rule sets below to use them, you can also create your own
+                    rules!
                 </p>
                 <h4>Common Rules</h4>
                 <p><a onclick="life()">Life: B3/S23</a></p>
@@ -99,9 +100,7 @@
         </div>
     </div>
     <!-- Placed at the end of the document so the pages load faster -->
-    <script
-        src="https://code.jquery.com/jquery-3.2.1.min.js"
-        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
     <!-- <script src="js/automataInJs.js"></script> -->
     <!--<script src="js/automataColored.js"></script>-->
