--- a/MapGen.html
+++ b/MapGen.html
@@ -90,7 +90,8 @@
          </div> -->
       </div>
       <!-- Placed at the end of the document so the pages load faster -->
-      <script src="js/jquery-1.11.1.min.js"></script>
+          <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous"></script>
       <script src="js/bootstrap.min.js"></script>
       <!-- <script src="js/automataInJs.js"></script> -->
       <script src="js/automataMapGen.js"></script>
