--- a/MapGen.html
+++ b/MapGen.html
@@ -1,101 +1,67 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <title>Index Page</title>
-      <!-- Bootstrap core CSS -->
-      <!-- <link href="css/bootstrap.min.css" rel="stylesheet">
 
-      <!-- Custom styles for this template -->
-      <link href="css/automata.css" rel="stylesheet">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>scott.camp-map</title>
+    <!--<base href="/">-->
+    <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
 
-      <!-- SWC Icon -->
-      <link rel="shortcut icon" href="img/icon.png">
-      <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+    <!--[if lte IE 8]>
+        <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/grids-responsive-old-ie-min.css">
+    <![endif]-->
+    <!--[if gt IE 8]><!-->
+    <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/grids-responsive-min.css">
+    <!--<![endif]-->
 
-      <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
 
-      <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+    <!--[if lte IE 8]>
+            <link rel="stylesheet" href="css/layouts/blog-old-ie.css">
+        <![endif]-->
+    <!--[if gt IE 8]><!-->
+    <link rel="stylesheet" href="css/ScottPage.css">
+    <!--<![endif]-->
+</head>
 
-      <link rel="stylesheet" href="css/layouts/scottPage.css">
+<body onload="load();" style="">
+    <div id="layout" class="pure-g">
+        <div class="sidebar pure-u-1 pure-u-md-1-4">
+            <div class="header">
+                <h1 class="brand-title">Scott Campbell</h1>
+                <h2 class="brand-tagline">Software Developer</h2>
 
-   </head>
-   <body onload="load();" style="background-color:black;">
-      <!-- <div class="header">
-         <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-            <a class="pure-menu-heading" href="index.html">Automata</a>
-            <ul class="pure-menu-list">
-               <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
-               <li class="pure-menu-item pure-menu-selected"><a href="" class="pure-menu-link">Automata</a></li>
-               <li class="pure-menu-item"><a href="source.html" class="pure-menu-link">Source</a></li>
-               <li class="pure-menu-item"><a href="network.html" class="pure-menu-link">Network</a></li>
-            </ul>
-         </div>
-      </div> -->
-      <div class="pure-g" align="center" style="padding-top:2em;">
-         <div class="pure-u-1-4 white-text">
-            <!-- <h3>Rules</h3>
+                <nav class="nav">
+                    <ul class="nav-list">
+                        <li class="nav-item">
+                            <a class="pure-button" href="index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="pure-button" href="https://www.linkedin.com/in/scott-campbell-325555125">LinkedIn</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="pure-button" href="https://github.com/mi1k">GitHub</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div class="content pure-u-1 pure-u-md-3-4">
+            <div class="pure-g" align="center" style="padding-top:2em;">
+                <div class="pure-u-1-2">
+                    <h1>Map Generator</h1>
+                    <canvas id="board" width="500" height="500">
+                      Your browser does not support the HTML5 canvas tag.</canvas>
+                    <br />
+                    <button onclick="map()" class="pure-button-primary">Generate</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+      crossorigin="anonymous"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/automataMapGen.js"></script>
+</body>
 
-            Born:<br>
-            1:<input type="checkbox" class="life" id="l1" value="1">
-            2:<input type="checkbox" class="life" id="l2" value="2">
-            3:<input type="checkbox" class="life" id="l3" value="3" checked="checked">
-            4:<input type="checkbox" class="life" id="l4" value="4">
-            5:<input type="checkbox" class="life" id="l5" value="5">
-            6:<input type="checkbox" class="life" id="l6" value="6">
-            7:<input type="checkbox" class="life" id="l7" value="7">
-            8:<input type="checkbox" class="life" id="l8" value="8">
-            <br>
-            Survive:<br>
-            1:<input type="checkbox" class="death" id="d1" value="1">
-            2:<input type="checkbox" class="death" id="d2" value="2" checked="checked">
-            3:<input type="checkbox" class="death" id="d3" value="3" checked="checked">
-            4:<input type="checkbox" class="death" id="d4" value="4">
-            5:<input type="checkbox" class="death" id="d5" value="5">
-            6:<input type="checkbox" class="death" id="d6" value="6">
-            7:<input type="checkbox" class="death" id="d7" value="7">
-            8:<input type="checkbox" class="death" id="d8" value="8">
-            <br>
-            <button onclick="setRules()" class="pure-button-primary">Set New Rules</button> -->
-         </div>
-
-         <div class="pure-u-1-2">
-            <h1>Cellular Automata</h1>
-            <canvas id="board" width="500" height="500">
-               Your browser does not support the HTML5 canvas tag.</canvas>
-            <br />
-            <button onclick="map()" class="pure-button-primary">map</button>
-            <!--<input type="range" id="region0" value="0" max = "139">-->
-            <input type="range" id="region1" value="2" max = "139">
-            <input type="range" id="region2" value="11" max = "139">
-            <input type="range" id="region3" value="28" max = "139">
-            <input type="range" id="region4" value="53" max = "139">
-            <input type="range" id="region5" value="77" max = "139">
-            <input type="range" id="region6" value="104" max = "139">
-            <input type="range" id="region7" value="121" max = "139">
-            <input type="range" id="region8" value="127" max = "139">
-            <input type="range" id="region9" value="134" max = "139">
-            <button onclick="drawMap()" class="pure-button-primary">Redraw</button>
-            <!-- <button onclick="learn()" class="pure-button-primary">Learn</button> -->
-         </div>
-         <!-- <div class="pure-u-1-4">
-            <h3>Info</h3>
-            <p>Imagine each square is a cell. A Black square is "dead" and a colored square is "alive" A red cell was just born, while a blue cell has past through several generations.
-               These cells have special rules for when they become alive, and when they die. The default ruleset is called "Conway's Game of Life" its notation would be B3/S23 (Born: 3 / Survive: 2, 3) you can click on one of the rule sets to use them</p>
-            <h4>Common Rules</h4>
-            <p><a onclick="life()" >Life: B3/S23</a></p>
-            <p><a onclick="replicator()">Replicator: B1357/S1357</a></p>
-            <p><a onclick="dayNight()">Day & Night: B3678/S34678</a></p>
-            <p><a onclick="maze()">Maze: B3/S12345</a></p>
-            <p><a onclick="walledCities()">Walled Cities: B45678/S2345</a></p>
-         </div> -->
-      </div>
-      <!-- Placed at the end of the document so the pages load faster -->
-          <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-        crossorigin="anonymous"></script>
-      <script src="js/bootstrap.min.js"></script>
-      <!-- <script src="js/automataInJs.js"></script> -->
-      <script src="js/automataMapGen.js"></script>
-      <!-- <script src="js/ml.js"></script> -->
-      <!-- <script src="js/automataCities.js"></script> -->
-   </body>
 </html>
