Changed Canvas size to 400px to accomodate mobile better

--- a/MapGen.html
+++ b/MapGen.html
@@ -48,9 +48,9 @@
         </div>
         <div class="content pure-u-1 pure-u-md-3-4">
             <div class="pure-g" align="center" style="padding-top:2em;">
-                <div class="pure-u-1-2">
+                <div class="pure-u-1">
                     <h1>Map Generator</h1>
-                    <canvas id="board" width="500" height="500">
+                    <canvas id="board" width="400" height="400">
                       Your browser does not support the HTML5 canvas tag.</canvas>
                     <br />
                     <button onclick="map()" class="pure-button-primary">Generate</button>
