--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <a class="pure-button" href="https://www.linkedin.com/in/scott-campbell-325555125">LinkedIn</a>
                         </li>
                         <li class="nav-item">
-                            <a class="pure-button" href="https://github.com/mi1k">GitHub</a>
+                            <a class="pure-button" href="https://github.com/Milkomatic">GitHub</a>
                         </li>
                     </ul>
                 </nav>
